fixtures/grammar/accept/comments.fm
---
# top-level comment
outer:
  # nested comment
  value: Vera Example
---
