fixtures/grammar/reject/blank-folded-line.fm
---
value: >
  first
  
  second
---
Vera Example
